--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.sushil.test"
+        applicationId "com.sushil.VideoPlayer"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.VideoPlayer.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,8 +24,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.VideoPlayer.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.VideoPlayer.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.8.0'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.0'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.0'
